# EducationalHub

./: CMakeLists.txt  main.c
laboratornaya/Discretka/: func_for_mnogestva.c
laboratornaya/laboratornaya_16/: laboratornaya_16.c  laboratornaya_16.h
laboratornaya/laboratornaya_18/: laboratornaya_18.c  laboratornaya_18.h
laboratornaya/laboratornaya_19/: laboratornaya_19.c  laboratornaya_19.h
laboratornaya/labornatornaya_18/: labornatornaya_18.c  labornatornaya_18.h
laboratornaya/tests/: tests for laboratornaya_16.c  tests for laboratornaya_16.h  tests for laboratornaya_18.c  tests for laboratornaya_18.h  tests for laboratornaya_19.c  tests for laboratornaya_19.h  tests for matrix.c  tests for matrix.h  tests for string.c  tests for string.h  tests for vector.c  tests for vector.h
libs/algorithms/: CMakeLists.txt
libs/algorithms/array/: array.c  array.h
libs/algorithms/sorting/: sorting.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/string/: string.c  string.h
libs/data_structures/unordered_array_set/: unordered_array_set.c
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
